[gd_scene load_steps=8 format=2]

[ext_resource path="res://visual/ressources/edit_icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/edit_mode/edit_tools_gui.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[node name="EditTools" type="PanelContainer"]
self_modulate = Color( 1, 1, 1, 0.627451 )
mouse_default_cursor_shape = 13
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 159.0
margin_bottom = 201.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 152.0
margin_bottom = 14.0
text = "LABEL_EDIT_MODE"
align = 1
uppercase = true

[node name="AddContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 152.0
margin_bottom = 50.0

[node name="AddButton" type="TextureButton" parent="VBoxContainer/AddContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture_normal = SubResource( 1 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/AddContainer"]
margin_left = 36.0
margin_right = 152.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "LIB_ADD_GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModifyContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 152.0
margin_bottom = 86.0

[node name="ModifyButton" type="TextureButton" parent="VBoxContainer/ModifyContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture_normal = SubResource( 2 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/ModifyContainer"]
margin_left = 36.0
margin_right = 152.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "LIB_EDIT_GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HideContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 152.0
margin_bottom = 122.0

[node name="HideButton" type="TextureButton" parent="VBoxContainer/HideContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture_normal = SubResource( 3 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/HideContainer"]
margin_left = 36.0
margin_right = 152.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "LIB_HIDE_GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 126.0
margin_right = 152.0
margin_bottom = 158.0

[node name="DeleteButton" type="TextureButton" parent="VBoxContainer/DeleteContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture_normal = SubResource( 4 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/DeleteContainer"]
margin_left = 36.0
margin_right = 152.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "LIB_DELETE_GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 162.0
margin_right = 152.0
margin_bottom = 194.0

[node name="SettingsButton" type="TextureButton" parent="VBoxContainer/SettingsContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture_normal = SubResource( 5 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/SettingsContainer"]
margin_left = 36.0
margin_right = 152.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "ACCESS_SETTING"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="." to="." method="_on_EditTools_gui_input"]
[connection signal="button_up" from="VBoxContainer/AddContainer/AddButton" to="." method="_on_AddButton_button_up"]
[connection signal="pressed" from="VBoxContainer/AddContainer/AddButton" to="." method="_on_AddButton_pressed"]
